--- a/java/中软国际_中级.md
+++ b/java/中软国际_中级.md
@@ -39,126 +39,40 @@ int是直接存储数据的值，Integer默认值是null，而int默认值是0
 StringBuilder和StringBuffer也是使用字符数组保存字符，但这两种对象都是可变的，即对字符串进行append操作，不会产生新的对象。它们的区别是：StringBuffer对方法加了同步锁，是线程安全的，StringBuilder非线程安全。
 
 # 什么是内部类？内部类的作用
-内部类指在类的内部再定义另一个类。内部类的作用：
-1）实现多重继承，因为java中类的继承只能单继承，使用内部类可达到多重继承；
-2）内部类可以很好的实现隐藏，一般非内部类，不允许有private或protected权限的，但内部类可以；
-3）减少了类文件编译后产生的字节码文件大小；内部类在编译完后也会产生.class文件，但文件名称是：外部类名称$内部类名称.class。分为以下几种：
-  1）成员内部类，作为外部类的一个成员存在，与外部类的属性、
-方法并列，成员内部类持
-有外部类的引用，成员内部类不能定义
-static
-变量和方法。应用场合：每一个外部类都需要
-一个内部类实例，内部类离不开外部类存在。
-2
-）
-静态内部类，内部类以
-static
-声明，其他类可通过外部类.内部类来访问。特点：不会持
-有外部类的引用，可以访问外部类的静态变量，若要访问成员变量须通过外部类的实例访问。
-应用场合：内部类不需要外部类的实例，仅为外部类提供或逻辑上属于外部类，逻辑上可单
-独存在。设计的意义：加强了类的封装性（静态内部类是外部类的子行为或子属性，两者保
-持着一定关系）
-，
-提高了代码的可读性（相关联的代码放在一起）。
-3
-）
-匿名内部类，在整个操作中只使用一次，没有名字，使用
-new
-创建，没有具体位置。
-4）
-局部内部类，在方法内或是代码块中定义类，
-7、
-抽象类和接口区别
-抽象类在类前面须用
-abstract
-关键字修饰，一般至少包含一个抽象方法，抽象方法指只有
-声明，用关键字
-abstract
-修饰，没有具体的实现的方法。
-因抽象类中含有无具体实现的方
-法，固不能用抽象类创建对象。
-当然如果只是用
-abstract
-修饰类而无具体实现，也是抽象
+内部类指在类的内部再定义另一个类。内部类的作用：<br />
+1）实现多重继承，因为java中类的继承只能单继承，使用内部类可达到多重继承；<br />
+2）内部类可以很好的实现隐藏，一般非内部类，不允许有private或protected权限的，但内部类可以；<br />
+3）减少了类文件编译后产生的字节码文件大小；内部类在编译完后也会产生.class文件，但文件名称是：外部类名称$内部类名称.class。分为以下几种：<br />
+   1）成员内部类，作为外部类的一个成员存在，与外部类的属性、方法并列，成员内部类持有外部类的引用，成员内部类不能定义static变量和方法。应用场合：每一个外部类都需要一个内部类实例，内部类离不开外部类存在。<br />
+  2）静态内部类，内部类以static声明，其他类可通过外部类.内部类来访问。特点：不会持有外部类的引用，可以访问外部类的静态变量，若要访问成员变量须通过外部类的实例访问。应用场合：内部类不需要外部类的实例，仅为外部类提供或逻辑上属于外部类，逻辑上可单独存在。设计的意义：加强了类的封装性（静态内部类是外部类的子行为或子属性，两者保持着一定关系），提高了代码的可读性（相关联的代码放在一起）。<br />
+  3）匿名内部类，在整个操作中只使用一次，没有名字，使用new创建，没有具体位置。<br />
+  4）局部内部类，在方法内或是代码块中定义类，<br />
+  
+# 抽象类和接口
+## 区别
+抽象类在类前面须用abstract关键字修饰，一般至少包含一个抽象方法，抽象方法指只有声明，用关键字abstract修饰，没有具体的实现的方法。因抽象类中含有无具体实现的方法，固不能用抽象类创建对象。
+当然如果只是用abstract修饰类而无具体实现，也是抽象类。抽象类也可以有成员变量和普通的成员方法。抽象方法必须为public或protected（若为private，不能被子类继承，子类无法实现该方法）。
+若一个类继承一个抽象类，则必须实现父类中所有的抽象方法，若子类没有实现父类的抽象方法，则也应该定义为抽象类。<br />
+接口用关键字interface修饰，接口也可以含有变量和方法，接口中的变量会被隐式指定为public static final变量。方法会被隐式的指定为public abstract ，接口中的所有方法均不
+能有具体的实现，即接口中的方法都必须为抽象方法。若一个非抽象类实现某个接口，必须实现该接口中所有的方法。区别：<br />
+1）抽象类可以提供成员方法实现的细节，而接口只能存在抽象方法；<br />
+2）抽象类的成员变量可以是各种类型，而接口中成员变量只能是public static final 类型；<br />
+3）接口中不能含有静态方法及静态代码块，而抽象类可以有静态方法和静态代码块；<br />
+4）一个类只能继承一个抽象类，用extends来继承，却可以实现多个接口，用implements来实现接口。<br />
 
-类。抽象类也可以有成员变量和普通的成员方法。抽象方法必须为
-public
-或
-protected（
-若
-为
-private
-，
-不能被子类继承，子类无法实现该方法）。
-若一个类继承一个抽象类，则必须
-实现父类中所有的抽象方法，若子类没有实现父类的抽象方法，则也应该定义为抽象类。
-接口用关键字
-i
-nterface
-修饰，接口也可以含有变量和方法，接口中的变量会被隐式指定为
-public
-static
-final
-变量。
-方法会被隐式的指定为
-public
-abstract
-，
-接口中的所有方法均不
-能有具体的实现，即接口中的方法都必须为抽象方法。若一个非抽象类实现某个接口，必须
-实现该接口中所有的方法。
-区别：
-1
-）
-抽象类可以提供成员方法实现的细节，而接口只能存在抽象方法；
-2
-）
-抽象类的成员变量可以是各种类型，而接口中成员变量只能是
-public
-static
-final
-类型；
-3
-）
-接口中不能含有静态方法及静态代码块，而抽象类可以有静态方法和静态代码块；
-4）一个类只能继承一个抽象类，用
-extends
-来继承，却可以实现多个接口，用
-i
-mplements
-来实现接口。
-7.1、
-抽象类的意义
-抽象类是用来提供子类的通用性，用来创建继承层级里子类的模板，减少代码编写，有利于
-代码规范化。
-
-7.2、
-抽象类与接口的应用场景
-抽象类的应用场景：1）规范了一组公共的方法，与状态无关，可以共享的，无需子类分别
-实现；而另一些方法却需要各个子类根据自己特定状态来实现特定功能；
-2
-）
-定义一组接口，但不强迫每个实现类都必须实现所有的方法，可用抽象类定义一组方法
-体可以是空方法体，由子类选择自己感兴趣的方法来覆盖；
-7.3、
-抽象类是否可以没有方法和属性？
+## 抽象类的意义
+抽象类是用来提供子类的通用性，用来创建继承层级里子类的模板，减少代码编写，有利于代码规范化。
+## 应用场景
+抽象类的应用场景：<br />
+1）规范了一组公共的方法，与状态无关，可以共享的，无需子类分别实现；而另一些方法却需要各个子类根据自己特定状态来实现特定功能；<br />
+2）定义一组接口，但不强迫每个实现类都必须实现所有的方法，可用抽象类定义一组方法体可以是空方法体，由子类选择自己感兴趣的方法来覆盖；
+## 抽象类是否可以没有方法和属性？
 可以
-7.4、
-接口的意义
-1
-）
-有利于代码的规范，对于大型项目，对一些接口进行定义，可以给开发人员一个清晰的
-指示，防止开发人员随意命名和代码混乱，影响开发效率。
-2
-）
-有利于代码维护和扩展，当前类不能满足要求时，不需要重新设计类，只需要重新写了
-个类实现对应的方法。
-3
-）
-解耦作用，全局变量的定义，当发生需求变化时，只需改变接口中的值即可。
-4）
-直接看接口，就可以清楚知道具体实现类间的关系，代码交给别人看，别人也能立马明
-白。
+## 接口的意义
+1）有利于代码的规范，对于大型项目，对一些接口进行定义，可以给开发人员一个清晰的指示，防止开发人员随意命名和代码混乱，影响开发效率。<br />
+2）有利于代码维护和扩展，当前类不能满足要求时，不需要重新设计类，只需要重新写了个类实现对应的方法。<br />
+3）解耦作用，全局变量的定义，当发生需求变化时，只需改变接口中的值即可。<br />
+4）直接看接口，就可以清楚知道具体实现类间的关系，代码交给别人看，别人也能立马明白。<br />
 
 8、
 泛型中
